--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div id="main">
-             <h1>Text 
-            <span>
-            <img src="arrow.png" alt=""></span>Emoji</h1> 
-        <div id="endec">
-            <h3 id="encrypt"><span><img src="lock.png" alt=""></span> Encrypt Text</h3>
-            <h3 id="decrypt"><span><img src="unlock.png" alt="" ></span>
-            Decrypt Text</h3> 
+        <h1>Text <span><img src="arrow.png" alt=""></span> Emojis</h1>
+        <div id="endec-div">
+            <h3 id="enc-btn"><span><img src="tala.png" alt=""></span> Encrypt Text</h3>
+            <h3 id="dec-btn"><span><img src="khulatala.png" alt=""></span> Decrypt Emojis</h3>
         </div>
- 
         <div id="encryption">
             <h5>1. Type a message</h5>
-            <textarea placeholder="Text to be encypted" id="txtmsg" cols="30" rows="10"></textarea>
+            <textarea placeholder="Haan yahi par likhna hai" name="" id="textmsg" cols="30" rows="10"></textarea>
             <h5>2. Set a password</h5>
-            <input type="password" name="" id="password" placeholder="Enter a password">
-            <button id="incrypt-btn"><span><img src="lock.png"  alt="">Encrypt Text</span></button>
-            <textarea placeholder="" id="enresult" cols="30" rows="4"></textarea>
+            <input placeholder="Kuch bhi daaldo lekin yaad rakhna" type="password" name="" id="password">
+            <h5>3. Encrypt message</h5>
+            <button id="encrypt-btn"><span><img src="./tala.png" alt=""></span>Encrypt Text</button>
         </div>
         <div id="decryption">
-            <h5>1. Paste encrypted emojis</h5>
-            <textarea placeholder="Text to be encypted" id="emojimsg" cols="30" rows="10"></textarea>
-            <h5>2. Type the password</h5>
-            <input type="password" placeholder="Your password goes here" id="finalpassword">
-            <button id="decrypt-btn"><span><img src="unlock.png" height="20px" alt="">Decrypt Text</span></button>
-            <textarea placeholder="" id="result" cols="30" rows="4"></textarea>
+            <h5>1. Paste encrypted message</h5>
+            <textarea placeholder="Haan yahi par likhna hai" name="" id="emojimsg" cols="30" rows="10"></textarea>
+            <h5>2. Type a password</h5>
+            <input placeholder="Kuch bhi daaldo lekin yaad rakhna" type="password" name="" id="finalpassword">
+            <h5>3. Decrypt Emojis</h5>
+            <button id="decrypt-btn"><span><img src="./khulatala.png" alt=""></span>Decrypt Text</button>
+        </div>
+        <div id="result">
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
+
 </html>
